--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
+    "@types/leaflet": "^1.9.8",
     "axios": "^1.6.7",
-    "leaflet": "^1.9.4",
+    "leaflet": "=1.9.4",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
